Collapse Navbar Layout Fix

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,7 +7,7 @@
   -webkit-text-size-adjust: 100%;
 }
 body {
-  padding-top: 50px;
+  padding-top: 40px;
   min-height: 100vh;
   position: absolute;
   width: 100%;
